--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 interface Props {
 	title: string;
 }
@@ -11,14 +12,51 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/icon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 <style is:global lang="scss">
+	@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+	html, body {
+		background-color: var(--background-base);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+	}
+	* {
+		margin: 0;
+		padding: 0;
+		user-select: none;
+		color: var(--text-base);
+		transition: all 100ms ease-in-out;
+		font-family: 'Kanit', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	}
+	h1{ font-size: 305px; }
+	h2{ font-size: 72px; }
+	h3{ font-size: 23px; }
+	p{ font-size: 17px; }
+	a{ text-decoration: none; }
+	li{ list-style: none; }
 
+	::-webkit-scrollbar {
+		width: 10px;
+	}
+	::-webkit-scrollbar-track {
+		border-radius: 10px;
+	}	
+	::-webkit-scrollbar-thumb {
+		background: var(--background-tinted-highlight);
+		border-radius: 1rem;
+	}
+	::-webkit-scrollbar-thumb:hover, ::-webkit-scrollbar-thumb:active {
+		background: var(--text-bright-accent);
+	}
 </style>
