--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,176 @@
 ---
+export const prerender = true;
 import Layout from '@/layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Welcome to PORTALS">
+    <header>
+        <div>
+            <h3>PORTALS</h3>
+        </div>
+        <div>
+            <a href="https://github.com/madmti/PortalsAstroRmk">
+                Github
+            </a>
+        </div>
+    </header>
+    <section id="box1">
+        <h2>PORTALS</h2>
+        <p>connecting</p>
+        <a href="#">Go login</a>
+        <small>Developed by madmti`s team</small>
+    </section>
+    <section id="box2">
+        <article>
+            <span>
+                <img src="/preview.png" height="400px" alt="">
+            </span>
+        </article>
+        <aside>
+            <h3>¿ Que es PORTALS ?</h3>
+            <p>PORTALS es una Aplicacion Web para comunicar personas con chat, llamadas, videollamadas y eventos de grupo como juegos y distintas actividades.</p>
+            <p>Tambien busca ser util tanto para grupos de trabajo como para comunidades y uso personal</p>
+
+            <h3>Tecnologias</h3>
+            <ul>
+                <li>
+                    <img src="/ts.svg" width="20" height="20" alt="TypeScript">
+                    TypeScript
+                </li>
+                <li>
+                    <img src="/astro.svg" width="20" height="20" alt="Astro">
+                    Astro
+                </li>
+                <li>
+                    <img src="/react.svg" width="20" height="20" alt="React">
+                    React
+                </li>
+                <li>
+                    <img src="/mongo.svg" width="20" height="20" alt="Mongo">
+                    Mongo DB
+                </li>
+            </ul>
+        </aside>
+    </section>
+    <section id="box3">
+        <h2>VERSION & DETAILS</h2>
+    </section>
+    <footer>
+        <p>PORTALS can mix the best of playing with friends, listen music & nice workspaces</p>
+    </footer>
 </Layout>
 
 <style lang="scss">
-    
-    
+    $t: solid 0.2rem red;
+
+    header{ // Nombre y Links
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        position: fixed;
+        z-index: 1;
+
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100px;
+
+        background-color: var(--background-press);
+
+        & div{ // separacion del header en IZQ y DER
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            height: 100%;
+            padding: 0 1rem;
+
+            & h3{ // Nombre "PORTALS"
+                align-self: flex-start;
+            }
+            & a{ // Links
+                align-self: flex-end;
+            }
+            & a:hover{
+                color: var(--text-violet);
+            }
+        }
+    }
+
+    section{
+        height: 100vh;
+        width: 90vw;
+    }
+    section#box1{
+        // SVG del titulo
+        background-image: url(/portal.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 400px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        letter-spacing: 2rem;
+
+        & a{ // botton "Go login"
+            display: grid;
+            place-items: center;
+
+            padding: 0.5rem 1rem;
+            border-radius: 1rem;
+
+            letter-spacing: 0.1rem;
+            background-color: var(--text-positive);
+            transform: translate(0, 3rem);
+
+            outline: solid 0rem var(--text-positive);
+        }
+        & a:hover{
+            outline: solid 0.2rem var(--text-positive);
+            outline-offset: 0.2rem;
+        }
+
+        & small{ // 
+            position: absolute;
+            bottom: 100px;
+
+            color: var(--text-subdued);
+            letter-spacing: 0.5rem;
+        }
+    }
+
+    section#box2{ // Preview y Descripcion
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        place-items: center;
+
+        & aside{ // descripcion
+            justify-self: start;
+            max-width: 40rem;
+
+            & ul, h3, p{ // espaciado
+                margin: 10px 0;
+                margin-left: 100px;
+            }
+            & li{ // Tecnologias con Icono
+                display: flex;
+                aling-items: center;
+                gap: 5px;
+            }
+        }
+    }
+
+    footer{
+        display: grid;
+        place-items: center;
+        
+        height: 15vh;
+        width: 100%;
+
+        background-color: var(--background-highlight);
+    }
 
 </style>
