Docs section started

--- a/src/pages/docs.astro
+++ b/src/pages/docs.astro
@@ -1,13 +1,3 @@
 ---
-import Layout from "@/layouts/Layout.astro";
-
+return Astro.redirect('/docs/GettingStarted'); // Redirect a el primer articulo
 ---
-
-
-<Layout title="PORTALS docs">
-    hola
-</Layout>
-
-<style lang="scss">
-
-</style>
