--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '@/layouts/Layout.astro';
 
 const LastPost = (await Astro.glob('../md/*.md')).reverse()[0];
 ---
-
+<!-- pene -->
 <Layout title="Welcome to PORTALS">
     <header>
         <div>
