FORGOT page 'send' -> 'send email'

--- a/src/pages/forgot.astro
+++ b/src/pages/forgot.astro
@@ -35,7 +35,7 @@ import { BACKEND_URL } from "@/public.env";
                 </a>
             </section>
             <footer>
-                <button type="submit">Send</button>
+                <button type="submit">Send email</button>
             </footer>
         </form>
     </main>
