--- a/src/pages/forgot.astro
+++ b/src/pages/forgot.astro
@@ -43,6 +43,16 @@ import { BACKEND_URL } from "@/public.env";
 
 <style lang="scss">
     $t:solid 0.2rem red;
+    $breakpoints: (
+        lg: 1350px,
+        md: 700px,
+        sm: 400px
+    );
+    @mixin media-up($breakpoint) {
+        @media screen and (min-width: map-get($breakpoints, $breakpoints)) {
+            @content;
+        }
+    }
     main{
         display: grid;
         place-items: center;
@@ -60,6 +70,11 @@ import { BACKEND_URL } from "@/public.env";
 
             display: grid;
             grid-template-rows: 1fr 0.2fr 1fr auto 3rem 0.5fr;
+
+            @include media-up(lg){
+                height: 100px;
+                width: 100px;
+            };
             
             & header{
                 display: grid;
