--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,10 +77,10 @@ const LastPost = (await Astro.glob('../md/*.md')).reverse()[0];
 
             <h3>The Team</h3>
             <TeamMember name='madmti'>
-                <img src="/madmti.png" width="30" height="30" alt="">
+                <img src="https://avatars.githubusercontent.com/madmti" width="30" height="30" alt="">
             </TeamMember>
-            <TeamMember name='emilio'>
-                <img src="/madmti.png" width="30" height="30" alt="">
+            <TeamMember name='FiddEm'>
+                <img src="https://avatars.githubusercontent.com/FiddEm" width="30" height="30" alt="">
             </TeamMember>
         </article>
     </section>
