--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-
 ---
 
 <Layout title="Not Found">
@@ -10,7 +9,7 @@ import Layout from "@/layouts/Layout.astro";
 </Layout>
 
 <style lang="scss">
-    div{
+    div {
         background-image: url(/portal.svg);
         background-position: center;
         background-repeat: no-repeat;
@@ -23,5 +22,13 @@ import Layout from "@/layouts/Layout.astro";
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @media screen and (max-width: 800px) {
+            background-size: 300px;
+            width: 400px;
+            & h2 {
+                font-size: 50px;
+            }
+        }
     }
 </style>
