--- a/src/pages/forgot.astro
+++ b/src/pages/forgot.astro
@@ -46,10 +46,10 @@ import { BACKEND_URL } from "@/public.env";
     $breakpoints: (
         lg: 1350px,
         md: 700px,
-        sm: 400px
+        sm: 500px
     );
     @mixin media-up($breakpoint) {
-        @media screen and (min-width: map-get($breakpoints, $breakpoints)) {
+        @media screen and (max-width: map-get($breakpoints, $breakpoint)) {
             @content;
         }
     }
@@ -70,12 +70,15 @@ import { BACKEND_URL } from "@/public.env";
 
             display: grid;
             grid-template-rows: 1fr 0.2fr 1fr auto 3rem 0.5fr;
-
-            @include media-up(lg){
-                height: 100px;
-                width: 100px;
-            };
             
+            // response
+            @include media-up(lg){
+                width: 450px;
+            };
+            @include media-up(sm){
+                width: 450px;
+            }
+            // -----
             & header{
                 display: grid;
                 place-items: center;
