--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -47,6 +47,16 @@ import { BACKEND_URL } from "@/public.env";
 
 <style lang="scss">
     $t:solid 0.2rem red;
+    $breakpoints: (
+        lg: 1350px,
+        md: 700px,
+        sm: 500px
+    );
+    @mixin media-up($breakpoint) {
+        @media screen and (max-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    }
     main{
         display: grid;
         place-items: center;
@@ -64,6 +74,11 @@ import { BACKEND_URL } from "@/public.env";
 
             display: grid;
             grid-template-rows: 1.4fr 1fr 1fr 1fr auto 3rem 1fr;
+            // response
+            @include media-up(lg){
+                width: 450px;
+                height: 500px;
+            };
             
             & header{
                 display: grid;
