--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,7 @@ const { title } = Astro.props;
 	h2{ font-size: 72px; }
 	h3{ font-size: 23px; }
 	p{ font-size: 17px; }
+	a , button{ font-size: 15px; }
 	a{ text-decoration: none; }
 	li{ list-style: none; }
 
