--- a/src/pages/add/server/join.astro
+++ b/src/pages/add/server/join.astro
@@ -1,13 +1,14 @@
 ---
-import { validateStoken } from '../../../lib/Actions';
+import { validateStoken } from '@/lib/Actions';
 const payload = validateStoken(Astro.cookies.get('portals:stoken')?.value);
 if (!payload) return Astro.redirect('/');
 
-import HomeLayout from '../../../layouts/HomeLayout.astro';
-import PathAnchor from '../../../components/PathAnchor.astro';
-import ServerJoinCard from '../../../components/ServerJoinCard.astro';
-import { BACKEND_URL } from '../../../public.env';
-import { GetServersByQuery, GetUserServers } from '../../../lib/APIcalls';
+import HomeLayout from '@/layouts/HomeLayout.astro';
+import PathAnchor from '@/components/PathAnchor.astro';
+import ServerJoinCard from '@/components/CreateConnect/ServerJoinCard.astro';
+import JoinSubmitter from '@/components/CreateConnect/JoinSubmitter';
+import { BACKEND_URL } from '@/public.env';
+import { GetServersByQuery, GetUserServers } from '@/lib/APIcalls';
 
 const userServers = await GetUserServers(BACKEND_URL, JSON.stringify(payload));
 
@@ -52,30 +53,29 @@ const servers = await GetServersByQuery(BACKEND_URL, JSON.stringify(payload), {
 	</div>
 	<div slot="main" id="main">
 		<header>
-            <h3>Public servers</h3>
-        </header>
+			<h3>Public servers</h3>
+		</header>
 		<article>
 			<ul>
 				{
 					servers.map((sv) => {
-						return (
-							<ServerJoinCard
-								server={sv}
-								userId={payload.user.id.toString()}
-								userServerList={userServers}
-							/>
-						);
+						return <ServerJoinCard server={sv} userServerList={userServers} />;
 					})
 				}
 			</ul>
 		</article>
 		<footer>
-            <form autocomplete="off" id="formID">
-                <label for="server">Name or ID</label>
-                <input required autofocus type="text" name="server"/>
-                <button type="submit"><p>Join</p></button>
-            </form>
-        </footer>
+			<form autocomplete="off" id="formID">
+				<label for="server">Name or ID</label>
+				<input required autofocus type="text" name="serverID" />
+				<button type="submit"><p>Join</p></button>
+			</form>
+		</footer>
+        <JoinSubmitter
+            URL={BACKEND_URL}
+            userID={payload.user.id.toString()}
+            client:only="react"
+        />
 	</div>
 </HomeLayout>
 
@@ -91,77 +91,77 @@ const servers = await GetServersByQuery(BACKEND_URL, JSON.stringify(payload), {
 
 		letter-spacing: 0.1rem;
 	}
-    #main{
-        display: grid;
-        grid-template-rows: 1fr 30rem 1fr;
-        gap: 20px;
+	#main {
+		display: grid;
+		grid-template-rows: 1fr 30rem 1fr;
+		gap: 20px;
 
-        height: 100%;
-        width: 100%;
+		height: 100%;
+		width: 100%;
 
-        & header{
-            display: flex;
-            align-items: center;
-            padding: 0 1rem;
+		& header {
+			display: flex;
+			align-items: center;
+			padding: 0 1rem;
 
-            letter-spacing: 0.1rem;
-            & h3{
-                font-size: 40px;
-            }
-        }
+			letter-spacing: 0.1rem;
+			& h3 {
+				font-size: 40px;
+			}
+		}
 
-        & article{
-            display: flex;
-            align-items: start;
-            flex-wrap: wrap;
+		& article {
+			display: flex;
+			align-items: start;
+			flex-wrap: wrap;
 
-            height: 100%;
-            width: calc(100% - 1rem);
+			height: 100%;
+			width: calc(100% - 1rem);
 
-            gap: 10px;
-            padding: 0 1rem;
-        }
+			gap: 10px;
+			padding: 0 1rem;
+		}
 
-        & footer{
-            display: flex;
-            align-items: center;
-            justify-content: center;
+		& footer {
+			display: flex;
+			align-items: center;
+			justify-content: center;
 
-            border-top: solid 0.2rem var(--background-base);
+			border-top: solid 0.2rem var(--background-base);
 
-            & form{
-                display: flex;
-                align-items: center;
+			& form {
+				display: flex;
+				align-items: center;
 
-                gap: 1rem;
+				gap: 1rem;
 
-                & input{
-                    padding: 0.2rem;
-                    border: 0;
-                    border-radius: 1rem;
+				& input {
+					padding: 0.2rem;
+					border: 0;
+					border-radius: 1rem;
 
-                    text-align: center;
-                    font-size: 20px;
-                    background-color: var(--background-elevated-base);
-                }
-                & input:is(:hover,:focus,:valid){
-                    outline: 0;
+					text-align: center;
+					font-size: 20px;
+					background-color: var(--background-elevated-base);
+				}
+				& input:is(:hover, :focus, :valid) {
+					outline: 0;
 
-                    padding: 0.5rem;
-                }
+					padding: 0.5rem;
+				}
 
-                & button{
-                    padding: 0.5rem 1rem;
-                    border: 0;
-                    border-radius: 1rem;
+				& button {
+					padding: 0.5rem 1rem;
+					border: 0;
+					border-radius: 1rem;
 
-                    cursor: pointer;
-                    background-color: var(--background-elevated-base);
-                }
-                & button:hover{
-                    background-color: var(--essential-positive);
-                }
-            }
-        }
-    }
+					cursor: pointer;
+					background-color: var(--background-elevated-base);
+				}
+				& button:hover {
+					background-color: var(--essential-positive);
+				}
+			}
+		}
+	}
 </style>
