Create servers section redy & section for add channels and bridges started

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -142,6 +142,13 @@ const isServerPath =
 				gap: 1rem;
 			}
 
+			& section#L{
+
+				& h3{
+					color: var(--text-positive);
+				}
+			}
+
 			& section#mid {
 				& h2 {
 					// titulo
